--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,29 @@
 <html>
 <head>
-  <title></title>
+  <title>My Chat Application</title>
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular.min.js"></script>
+  <script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src='chat.js'></script>
+
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font: 13px Helvetica, Arial; }
+    form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+    form input { border: 0; padding: 10px; width: 60%; margin-right: .5%; }
+    form input.user-name { border: 0; padding: 10px; width: 10%; margin-right: .5%; }
+    form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+    #messages { list-style-type: none; margin: 0; padding: 0; }
+    #messages li { padding: 5px 10px; }
+    #messages li:nth-child(odd) { background: #eee; }
+  </style>
+  <script type="text/javascript">
+    var socket = io();
+  </script>
+
 </head>
-<body>
-Make an awesome app!
+<body ng-app='chatApp'>
+  <div ui-view></div>
 </body>
 </html>
